--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "dbreset": "npx prisma db push --force-reset && npx prisma generate && npx prisma migrate dev --name dev",
     "prod_reset": "npm install -g prisma && npx prisma migrate reset"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.9.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^6.1.2",
@@ -33,6 +37,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "babel-plugin-react-compiler": "^0.0.0-experimental-696af53-20240625",
+    "coda-js": "^4.2.1",
     "framer-motion": "^11.2.10",
     "lodash": "^4.17.21",
     "lord-icon-element": "^4.1.2",
@@ -59,7 +64,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.1",
     "@types/lodash": "^4.17.5",
-    "@types/node": "^20",
+    "@types/node": "^22.8.1",
     "@types/node-schedule": "^2.1.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -68,7 +73,8 @@
     "postcss": "^8",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": "21.x"
